--- a/public/style/style.css
+++ b/public/style/style.css
@@ -28,7 +28,7 @@ li a:hover{
 h1,h2{
 	padding: 30px 0px !important;
 }
-input {
+input,.btn{
     border-radius: 0 !important;
 }
 
@@ -51,7 +51,7 @@ input {
 .nav-bottom{
 	position: relative;
 	top: 50px;
-	min-height: 150px;
+	min-height: 120px;
 	height: auto;
 	margin: 0 auto;
 	font-size: 26px;
@@ -115,6 +115,7 @@ div.book_navigation{
 	height: auto;
 	padding: 10px 60px;
 	text-align: center;
+	font-size: 20px;
 }
 
 .book .row .col-sm-3.col-md-3 {
@@ -271,7 +272,7 @@ div.category_nav{
 	margin: 10px auto !important;
 	padding: 10px 10px;
 	text-align: left;
-	border: 1px solid rgba(0,0,0,0.4);
+	border: 2px solid rgba(0,0,0,0.4);
 	width: 100% !important;
 }
 .category_nav .row .col-sm-2{
@@ -303,6 +304,9 @@ div.category_nav{
 	color: black !important;
 	display: block;
 	
+}
+.category_nav .row .col-sm-10 .row{
+
 }
 .category_nav .row .col-sm-10 .row .col-sm-3.col-md-3 {
 	text-align: center;
