--- a/public/style/style.css
+++ b/public/style/style.css
@@ -36,6 +36,15 @@ textarea {
     resize: vertical;
 
 }
+.mobile_category_menu{
+	width: 20%;
+	text-align: center;
+}
+.glyphicon-plus, .glyphicon-minus{
+	font-size: 20px;
+  	color: #000;
+  	display: block;
+}
 
 /* navbar-top */
 .navbar-header a{
@@ -48,6 +57,7 @@ textarea {
 	background-color: #C0392B !important;
 	color: #fff !important;
 	border: 0 !important;
+	height: 50px;
 }
 .dropdown-menu{
 	color: red !important;
@@ -346,6 +356,8 @@ div.category_nav{
 }
 /*book list category ends*/
 
+
+
 /*book details page*/
 .nav.nav-tabs{
 	border-bottom: 3px solid #C0392B;
@@ -359,6 +371,42 @@ div.category_nav{
 	color: #fff !important;
 	background-color: #C0392B !important;
 	border: 1px solid #C0392B;
+}
+div.content_wrap{
+	position: relative ;
+	width: 100%;
+}
+.alert_message{
+    position: fixed;
+    left: 50%;
+    top: 77px;
+    width: 40%;
+    transform: translate(-50%, -50%);
+	margin : 0 auto !important;
+	font-size: 18px;
+	font-family: sans-serif;
+	color: #fff !important;
+	background-color: #2C3E50 !important;
+	z-index: 999;
+}
+.fa.fa-check{
+	font-size: 20px;
+	color: green;
+	background-color: #fff;
+	border-radius: 0;
+}
+/*modal*/
+
+.modal-body>.modal_wrap_content{
+	margin: 20px;
+}
+.modal-body{
+	background-color: #d3d3d3 !important;
+	border: 4px solid #2C3E50;
+	color: #2C3E50
+}
+form.review_form textarea{
+	resize:none;
 }
 /*review rating*/
 .glyphicon-star-empty,.glyphicon-star{
@@ -556,6 +604,10 @@ div.contact_form form,div.about{
     background: #62c0f4;
     overflow: hidden;
 }
+div.content_wrap{
+	position: relative ;
+	width: 100%;
+}
 /*contact form ends*/
 
 /* about */
@@ -575,6 +627,16 @@ div.contact_form form,div.about{
 	.register-form>div>input,.register-form>div>label{
 		width: 100%;
 		display: block;
+	}
+	/* book detail */
+	.alert_message{
+		width: 100%;
+	    position: fixed;
+	    left: 50%;
+	    top: 75px;
+	    text-align: center;
+	    transform: translate(-50%, -50%);
+		margin : 0 auto !important;
 	}
 
 }
